UI/CSS changes (#1)
* word changes and logo addition

* company to customer

* colors all fixed up

* back to white, remove logo, add favico

* minor changes and css

--- a/dojo/templates/dojo/new_product_type.html
+++ b/dojo/templates/dojo/new_product_type.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3> Register a new Product Type </h3>
+    <h3> Register a new Pentest Type </h3>
     <form class="form-horizontal" action="{%  url 'add_product_type' %}" method="post">{% csrf_token %}
         {% include "dojo/form_fields.html" with form=form %}
         <div class="form-group">
