--- a/dojo/templates/dojo/view_product_details.html
+++ b/dojo/templates/dojo/view_product_details.html
@@ -160,7 +160,7 @@
             <td>{{ prod.get_business_criticality_display|notspecified }}</td>
           </tr>
           <tr>
-            <td><strong>Pentest Type</strong></td>
+            <td><strong>Product Type</strong></td>
             <td>{{ prod.prod_type|notspecified }}</td>
           </tr>
           <tr>
