--- a/dojo/templates/dojo/edit_product_type.html
+++ b/dojo/templates/dojo/edit_product_type.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3> Edit Pentest Type {{ pt.name }}</h3>
+    <h3> Edit Product Type {{ pt.name }}</h3>
     <form class="form-horizontal" action="{% url 'edit_product_type' pt.id %}" method="post">{% csrf_token %}
         {% include "dojo/form_fields.html" with form=form %}
         <div class="form-group">
