--- a/dojo/templates/dojo/engagement.html
+++ b/dojo/templates/dojo/engagement.html
@@ -26,8 +26,8 @@
                     <table id="engagements"
                            class="tablesorter-bootstrap table table-bordered table-condensed table-striped table-hover">
                         <tr>
-                            <th class="prod_name">{% dojo_sort request 'Customer' 'name' 'asc' %}</th>
-                            <th class="prod_name">{% dojo_sort request 'Pentest Type' 'prod_type__name' %}</th>
+                            <th class="prod_name">{% dojo_sort request 'Product' 'name' 'asc' %}</th>
+                            <th class="prod_name">{% dojo_sort request 'Product Type' 'prod_type__name' %}</th>
                             <th>Active Engagements</th>
                             {% if user.is_staff %}
                                 <th> Engagement</th>
