--- a/dojo/templates/dojo/request_report.html
+++ b/dojo/templates/dojo/request_report.html
@@ -8,7 +8,7 @@
                     <h3 class="has-filters">
                         Generate
                         {% if product_type %}
-                            Pentest Type
+                            Product Type
                         {% elif product %}
                             Product
                         {% elif engagement %}
