--- a/dojo/static/dojo/css/nDepth.css
+++ b/dojo/static/dojo/css/nDepth.css
@@ -19,3 +19,19 @@ body, .navbar, #page-wrapper, .footer, .sidebar {
   padding-top:7px;
   display:block
 }
+
+.circle {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.redcircle {
+  background-color: red !important;
+}
+
+.greencircle {
+  background-color: green !important;
+}
