first round of adding scripting

--- a/dojo/templates/base.html
+++ b/dojo/templates/base.html
@@ -477,7 +477,7 @@
             {% endif %}
             <!-- end of tabs -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12" id="alert_placeholder">
                     {% if messages %}
                         {% for message in messages %}
                             <div class="alert {{ message.tags }} alert-dismissible" role="alert">
